--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
 				<h3 class="t4"><span>Name : </span>Abhick Ghosh</h3>
 				<h3 class="t4"><span>Age : </span>21 years</h3>
 				<h3 class="t4"><span>Qualification: </span>B.Tech in Computer Science and Engineering(3rd Year)</h3>
-				<h3 class="t4"><span>Role : </span>Front-End Developer, Data Analyst</h3>
+				<h3 class="t4"><span>Role : </span>Front-End Developer,Java Language Developer </h3>
 				<h3 class="t4"><span>Language : </span>English , Hindi , Bengali</h3>
-				<a href="https://drive.google.com/file/d/1PCzZo9hiiS_ZTqU20csUWE7ajGr6wXX_/view?usp=share_link"><button class="btn">
+				<a href="https://drive.google.com/file/d/1VAa1HK1SiKjC6iQV1cEMXAqwS7QeOCg5/view?usp=share_link"><button class="btn">
 						<h10>Download CV<i class="fas fa-download"></i></h10>
 					</button></a>
 			</div>
