--- a/index.html
+++ b/index.html
@@ -508,20 +508,20 @@
 			<div class="box">
 				<img src="images/piano.png" alt="">
 				<div class="layer">
-					<h3>Playable Piano</h3>
-					<a href="https://github.com/Abhick28/Piano"><i class="fa-solid fa-up-right-from-square"></i></a>
+					<h3>Virtual Piano</h3>
+					<a href="https://github.com/Abhick28/Virtual-Piano"></i></a>
 				</div>
 			</div>
 			<div class="box">
 				<img src="images/car.png" alt="">
 				<div class="layer">
-					<h3>Car Race</h3><a href="https://github.com/Abhick28/Games/tree/main/Games/CarGame"><i class="fa-solid fa-up-right-from-square"></i></a>
+					<h3>Car Game</h3><a href="https://github.com/Abhick28/2D-Car-Game"><i class="fa-solid fa-up-right-from-square"></i></a>
 				</div>
 			</div>
 			<div class="box">
 				<img src="images/snake.png" alt="">
 				<div class="layer">
-					<h3>Snake Game</h3><a href="https://github.com/Abhick28/Games/tree/main/Games/CarGame"><i class="fa-solid fa-up-right-from-square"></i></a>
+					<h3>Snake and Ladders</h3><a href="https://github.com/Abhick28/Snake-and-Ladders"><i class="fa-solid fa-up-right-from-square"></i></a>
 				</div>
 			</div>
 		</div>
