--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 			<div class="box">
 				<img src="images/piano.png" alt="">
 				<div class="layer">
-					<h3>Virtual Piano</h3>
+					<h3>Virtual Piano</h3><i class="fa-solid fa-up-right-from-square"></i>
 					<a href="https://github.com/Abhick28/Virtual-Piano"></i></a>
 				</div>
 			</div>
