--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 		<div class="row">
 			<div class="counter">
 				<div class="box">
-					<img src="images/img.png" alt=""></a>
+					<img src="images/Abhick Ghosh.jpg" alt=""></a>
 				</div>
 			</div>
 			<div class="info">
