--- a/index.html
+++ b/index.html
@@ -523,6 +523,12 @@
 					<h3>Snake and Ladders</h3><a href="https://github.com/Abhick28/Snake-and-Ladders"><i class="fa-solid fa-up-right-from-square"></i></a>
 				</div>
 			</div>
+		        <div class="box">
+				<img src="images/editor.png" alt="">
+				<div class="layer">
+					<h3>Snake and Ladders</h3><a href="https://abhick28.github.io/Web-Code-Editor/"><i class="fa-solid fa-up-right-from-square"></i></a>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="contact" id="contact">
