--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 		        <div class="box">
 				<img src="images/editor.png" alt="">
 				<div class="layer">
-					<h3>Snake and Ladders</h3><a href="https://abhick28.github.io/Web-Code-Editor/"><i class="fa-solid fa-up-right-from-square"></i></a>
+					<h3>Web Code Editor</h3><a href="https://abhick28.github.io/Web-Code-Editor/"><i class="fa-solid fa-up-right-from-square"></i></a>
 				</div>
 			</div>
 		</div>
