--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="blocks" style="--i:18;"></div>
 			<div class="blocks" style="--i:19;"></div>
 			<div class="blocks" style="--i:20;"></div>
-			<h3>AG</h3>
+			<i class="fa-solid fa-laptop-code logo"></i>
 		</div>
 		<nav class="navbar">
 			<a href="#home">
