--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 							<h7>Java Programmer</h7>
 						</span></li>
 					<li><span>
-							<h7>Python Programmer</h7>
+							<h7>C Programmer</h7>
 						</span></li>
 					<li><span>
 							<h7>Web Designer</h7>
