--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 							<h7>Web Designer</h7>
 						</span></li>
 			</div>
-			<p class="t3">I am a CSE undergrad student with a knowledge of C and Java,and also a web developer. I am in my third year of studies, eager to begin my career in the industry. I am very passionate about creating clean websites that will deliver a great user experience. I am constantly in touch with the latest technologies to grow my skills and offer the best possible solutions.</p>
+			<p class="t3">I am a CSE undergrad student with a knowledge of C and Java,and also a web developer. I am in my fourth year of studies, eager to begin my career in the industry. I am very passionate about creating clean websites that will deliver a great user experience. I am constantly in touch with the latest technologies to grow my skills and offer the best possible solutions.</p>
 			<a href="#about"><button class="btn">
 					<h10>About Me <i class="fas fa-user"></i></h>
 				</button></a>
@@ -425,7 +425,7 @@
 			<div class="info">
 				<h3 class="t4"><span>Name : </span>Abhick Ghosh</h3>
 				<h3 class="t4"><span>Age : </span>21 years</h3>
-				<h3 class="t4"><span>Qualification: </span>B.Tech in Computer Science and Engineering(3rd Year)</h3>
+				<h3 class="t4"><span>Qualification: </span>B.Tech in Computer Science and Engineering(4th Year)</h3>
 				<h3 class="t4"><span>Role : </span>Front-End Developer,Java Language Developer </h3>
 				<h3 class="t4"><span>Language : </span>English , Hindi , Bengali</h3>
 				<a href="https://drive.google.com/file/d/1VAa1HK1SiKjC6iQV1cEMXAqwS7QeOCg5/view?usp=share_link"><button class="btn">
@@ -435,7 +435,7 @@
 			<div class="counter1">
 				<h11 class="t3"> Socials:-</h11>
 				<div class="box">
-					<a href=" https://www.linkedin.com/in/abhick-ghosh-501863207"> <img src="images/linkedin.jpg" alt=""> </a>
+					<a href="https://drive.google.com/file/d/1moYoDzI3q77q5cKsqEwpk94n1cVYqs40/view?usp=sharing"> <img src="images/linkedin.jpg" alt=""> </a>
 					<h3 style="color:#fff">&nbsp;Linked IN</h3>
 				</div>
 				<div class="box">
