--- a/index.html
+++ b/index.html
@@ -396,16 +396,16 @@
 				<div class="static-txt">I'm a</div>
 				<ul class="dynamic-txts">
 					<li><span>
-							<h7>Front-End Web Developer</h7>
+							<h7>Penetration Tester</h7>
 						</span></li>
 					<li><span>
 							<h7>Java Programmer</h7>
 						</span></li>
 					<li><span>
-							<h7>C Programmer</h7>
+							<h7>Security Analyst</h7>
 						</span></li>
 					<li><span>
-							<h7>Web Designer</h7>
+							<h7>Cybersecurity Enthusiast</h7>
 						</span></li>
 			</div>
 			<p class="t3">I am a CSE undergrad student with a knowledge of C and Java,and also a web developer. I am in my fourth year of studies, eager to begin my career in the industry. I am very passionate about creating clean websites that will deliver a great user experience. I am constantly in touch with the latest technologies to grow my skills and offer the best possible solutions.</p>
