--- a/index.html
+++ b/index.html
@@ -408,8 +408,7 @@
 							<h7>Cybersecurity Enthusiast</h7>
 						</span></li>
 			</div>
-			<p class="t3">I am a CSE undergrad student with a knowledge of C and Java,and also a web developer. I am in my fourth year of studies, eager to begin my career in the industry. I am very passionate about creating clean websites that will deliver a great user experience. I am constantly in touch with the latest technologies to grow my skills and offer the best possible solutions.</p>
-			<a href="#about"><button class="btn">
+			<p class="t3">I am a CSE undergrad student with a knowledge of Java and C. I am in my fourth year of studies, eager to begin my career in the industry. I am passionate about cybersecurity and continuously expanding my expertise in protecting digital assets. I am eager to contribute to innovative security solutions and enhance organizational defenses.
 					<h10>About Me <i class="fas fa-user"></i></h>
 				</button></a>
 	</section>
