--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 							<h7>Cybersecurity Enthusiast</h7>
 						</span></li>
 			</div>
-			<p class="t3">I am a CSE undergrad student with a knowledge of Java and C. I am in my fourth year of studies, eager to begin my career in the industry. I am passionate about cybersecurity and continuously expanding my expertise in protecting digital assets. I am eager to contribute to innovative security solutions and enhance organizational defenses.
+			<p class="t3">I am a CSE undergrad student with a knowledge of Java and C. I am in my fourth year of studies, eager to begin my career in the industry. I am passionate about cybersecurity and continuously expanding my expertise in protecting digital assets. I am eager to contribute to innovative security solutions and enhance organizational defenses.</p>
 					<h10>About Me <i class="fas fa-user"></i></h>
 				</button></a>
 	</section>
